[gd_scene load_steps=11 format=3 uid="uid://bwgosbcchbb0b"]

[ext_resource type="Script" path="res://Scripts/UI/HUD/item_obtained.gd" id="1_htocm"]
[ext_resource type="Texture2D" uid="uid://ddtpji63tga8w" path="res://Assets/Textures/UI/HUD/Interaction/empty_item_obtained_icon_background.png" id="2_oqujk"]
[ext_resource type="Texture2D" uid="uid://b2mdejxu1p8p0" path="res://Assets/Textures/UI/HUD/smooth_light_circle_out.png" id="4_8n2pn"]
[ext_resource type="Texture2D" uid="uid://h2uuxhh8peog" path="res://Assets/Textures/UI/HUD/Interaction/empty_message.png" id="4_c8gn2"]

[sub_resource type="LabelSettings" id="LabelSettings_ej1ep"]
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_2ukct"]

[sub_resource type="Animation" id="Animation_ulebw"]
resource_name = "fade_in"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(-2.5, -2.5),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_j5kff"]
resource_name = "fade_out"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(-2.5, -2.5),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nfswf"]
_data = {
"fade_in": SubResource("Animation_ulebw"),
"fade_out": SubResource("Animation_j5kff")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wfb5c"]

[node name="ItemObtained" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_htocm")

[node name="PanelContainer" type="PanelContainer" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -192.0
offset_right = 128.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="PanelContainer/CenterContainer"]
layout_mode = 2
texture = ExtResource("2_oqujk")

[node name="fade_out" type="TextureRect" parent="PanelContainer/CenterContainer"]
modulate = Color(1, 1, 1, 0.498039)
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
texture = ExtResource("4_8n2pn")
expand_mode = 1
stretch_mode = 5

[node name="glow_lines" type="TextureRect" parent="PanelContainer/CenterContainer"]
modulate = Color(1, 1, 1, 0.498039)
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
texture = ExtResource("4_8n2pn")
expand_mode = 1
stretch_mode = 5

[node name="ItemIcon" type="TextureRect" parent="PanelContainer/CenterContainer"]
custom_minimum_size = Vector2(160, 160)
layout_mode = 2
size_flags_horizontal = 4
expand_mode = 1
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 300

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="NinePatchRect" type="NinePatchRect" parent="PanelContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
texture = ExtResource("4_c8gn2")
patch_margin_left = 25
patch_margin_top = 25
patch_margin_right = 25
patch_margin_bottom = 25
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/MarginContainer2/MarginContainer"]
layout_mode = 2

[node name="ItemName" type="Label" parent="PanelContainer/VBoxContainer/MarginContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_ej1ep")
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer/MarginContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 10

[node name="ItemDescription" type="Label" parent="PanelContainer/VBoxContainer/MarginContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_2ukct")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_nfswf")
}

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -202.0
offset_right = 200.0
offset_bottom = 202.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_wfb5c")
disabled = true
flat = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
